--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
        "4  4 0 0 0 0 0 0 0 0 0 0 0 3 15 23 28 48 50 58 84...  Training"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
        "4        0   0  "
       ]
      },
-     "execution_count": 71,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
        "4          0         0        1      0        0     0         0        0   0  "
       ]
      },
-     "execution_count": 73,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +434,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,7 @@
        "4          0         0        1      0        0     0         0        0  "
       ]
      },
-     "execution_count": 81,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +676,7 @@
        "(35538, 48, 48, 1)"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -815,7 +815,7 @@
        "4          0         0        1      0        0     0         0        0  "
       ]
      },
-     "execution_count": 85,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -826,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -844,7 +844,7 @@
        "(35538, 9)"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -864,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -873,7 +873,7 @@
        "(35538, 9)"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -893,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1304,7 +1304,7 @@
        "20      19  "
       ]
      },
-     "execution_count": 93,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1315,7 +1315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1326,7 +1326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1340,7 +1340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1349,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1358,7 +1358,7 @@
        "(35538, 11)"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1369,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1378,7 +1378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1387,7 +1387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1515,7 +1515,7 @@
        "4          0         0        1      0        0     0         0        0  "
       ]
      },
-     "execution_count": 128,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1526,7 +1526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1535,7 +1535,7 @@
        "(35538, 11)"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1546,7 +1546,279 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/2r/kmz9wfbn6vn03_888ghbrcd00000gn/T/ipykernel_5670/654623638.py:1: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '0        0.4\n",
+      "1        0.6\n",
+      "2        0.5\n",
+      "3        0.4\n",
+      "4        0.9\n",
+      "        ... \n",
+      "35881    0.5\n",
+      "35882    0.8\n",
+      "35884    0.0\n",
+      "35885    0.0\n",
+      "35886    0.2\n",
+      "Name: neutral, Length: 35538, dtype: float64' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
+      "  final.iloc[:,2:] = final.iloc[:,2:]/10\n",
+      "/var/folders/2r/kmz9wfbn6vn03_888ghbrcd00000gn/T/ipykernel_5670/654623638.py:1: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '0        0.0\n",
+      "1        0.0\n",
+      "2        0.0\n",
+      "3        0.0\n",
+      "4        0.0\n",
+      "        ... \n",
+      "35881    0.0\n",
+      "35882    0.0\n",
+      "35884    0.0\n",
+      "35885    1.0\n",
+      "35886    0.0\n",
+      "Name: happiness, Length: 35538, dtype: float64' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
+      "  final.iloc[:,2:] = final.iloc[:,2:]/10\n",
+      "/var/folders/2r/kmz9wfbn6vn03_888ghbrcd00000gn/T/ipykernel_5670/654623638.py:1: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '0        0.0\n",
+      "1        0.1\n",
+      "2        0.0\n",
+      "3        0.0\n",
+      "4        0.0\n",
+      "        ... \n",
+      "35881    0.0\n",
+      "35882    0.0\n",
+      "35884    0.0\n",
+      "35885    0.0\n",
+      "35886    0.0\n",
+      "Name: surprise, Length: 35538, dtype: float64' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
+      "  final.iloc[:,2:] = final.iloc[:,2:]/10\n",
+      "/var/folders/2r/kmz9wfbn6vn03_888ghbrcd00000gn/T/ipykernel_5670/654623638.py:1: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '0        0.1\n",
+      "1        0.1\n",
+      "2        0.3\n",
+      "3        0.4\n",
+      "4        0.1\n",
+      "        ... \n",
+      "35881    0.3\n",
+      "35882    0.2\n",
+      "35884    0.0\n",
+      "35885    0.0\n",
+      "35886    0.5\n",
+      "Name: sadness, Length: 35538, dtype: float64' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
+      "  final.iloc[:,2:] = final.iloc[:,2:]/10\n",
+      "/var/folders/2r/kmz9wfbn6vn03_888ghbrcd00000gn/T/ipykernel_5670/654623638.py:1: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '0        0.3\n",
+      "1        0.0\n",
+      "2        0.1\n",
+      "3        0.1\n",
+      "4        0.0\n",
+      "        ... \n",
+      "35881    0.0\n",
+      "35882    0.0\n",
+      "35884    0.7\n",
+      "35885    0.0\n",
+      "35886    0.1\n",
+      "Name: anger, Length: 35538, dtype: float64' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
+      "  final.iloc[:,2:] = final.iloc[:,2:]/10\n",
+      "/var/folders/2r/kmz9wfbn6vn03_888ghbrcd00000gn/T/ipykernel_5670/654623638.py:1: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '0        0.2\n",
+      "1        0.0\n",
+      "2        0.0\n",
+      "3        0.0\n",
+      "4        0.0\n",
+      "        ... \n",
+      "35881    0.0\n",
+      "35882    0.0\n",
+      "35884    0.1\n",
+      "35885    0.0\n",
+      "35886    0.1\n",
+      "Name: disgust, Length: 35538, dtype: float64' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
+      "  final.iloc[:,2:] = final.iloc[:,2:]/10\n",
+      "/var/folders/2r/kmz9wfbn6vn03_888ghbrcd00000gn/T/ipykernel_5670/654623638.py:1: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '0        0.0\n",
+      "1        0.0\n",
+      "2        0.0\n",
+      "3        0.0\n",
+      "4        0.0\n",
+      "        ... \n",
+      "35881    0.0\n",
+      "35882    0.0\n",
+      "35884    0.0\n",
+      "35885    0.0\n",
+      "35886    0.0\n",
+      "Name: fear, Length: 35538, dtype: float64' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
+      "  final.iloc[:,2:] = final.iloc[:,2:]/10\n",
+      "/var/folders/2r/kmz9wfbn6vn03_888ghbrcd00000gn/T/ipykernel_5670/654623638.py:1: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '0        0.0\n",
+      "1        0.0\n",
+      "2        0.0\n",
+      "3        0.0\n",
+      "4        0.0\n",
+      "        ... \n",
+      "35881    0.0\n",
+      "35882    0.0\n",
+      "35884    0.2\n",
+      "35885    0.0\n",
+      "35886    0.0\n",
+      "Name: contempt, Length: 35538, dtype: float64' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
+      "  final.iloc[:,2:] = final.iloc[:,2:]/10\n",
+      "/var/folders/2r/kmz9wfbn6vn03_888ghbrcd00000gn/T/ipykernel_5670/654623638.py:1: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '0        0.0\n",
+      "1        0.2\n",
+      "2        0.1\n",
+      "3        0.1\n",
+      "4        0.0\n",
+      "        ... \n",
+      "35881    0.2\n",
+      "35882    0.0\n",
+      "35884    0.0\n",
+      "35885    0.0\n",
+      "35886    0.1\n",
+      "Name: unknown, Length: 35538, dtype: float64' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
+      "  final.iloc[:,2:] = final.iloc[:,2:]/10\n"
+     ]
+    }
+   ],
+   "source": [
+    "final.iloc[:,2:] = final.iloc[:,2:]/10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pixels</th>\n",
+       "      <th>usage</th>\n",
+       "      <th>neutral</th>\n",
+       "      <th>happiness</th>\n",
+       "      <th>surprise</th>\n",
+       "      <th>sadness</th>\n",
+       "      <th>anger</th>\n",
+       "      <th>disgust</th>\n",
+       "      <th>fear</th>\n",
+       "      <th>contempt</th>\n",
+       "      <th>unknown</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>70 80 82 72 58 58 60 63 54 58 60 48 89 115 121...</td>\n",
+       "      <td>train</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>151 150 147 155 148 133 111 140 170 174 182 15...</td>\n",
+       "      <td>train</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>231 212 156 164 174 138 161 173 182 200 106 38...</td>\n",
+       "      <td>train</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>24 32 36 30 32 23 19 20 30 41 21 22 32 34 21 1...</td>\n",
+       "      <td>train</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4 0 0 0 0 0 0 0 0 0 0 0 3 15 23 28 48 50 58 84...</td>\n",
+       "      <td>train</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              pixels  usage  neutral  \\\n",
+       "0  70 80 82 72 58 58 60 63 54 58 60 48 89 115 121...  train      0.4   \n",
+       "1  151 150 147 155 148 133 111 140 170 174 182 15...  train      0.6   \n",
+       "2  231 212 156 164 174 138 161 173 182 200 106 38...  train      0.5   \n",
+       "3  24 32 36 30 32 23 19 20 30 41 21 22 32 34 21 1...  train      0.4   \n",
+       "4  4 0 0 0 0 0 0 0 0 0 0 0 3 15 23 28 48 50 58 84...  train      0.9   \n",
+       "\n",
+       "   happiness  surprise  sadness  anger  disgust  fear  contempt  unknown  \n",
+       "0        0.0       0.0      0.1    0.3      0.2   0.0       0.0      0.0  \n",
+       "1        0.0       0.1      0.1    0.0      0.0   0.0       0.0      0.2  \n",
+       "2        0.0       0.0      0.3    0.1      0.0   0.0       0.0      0.1  \n",
+       "3        0.0       0.0      0.4    0.1      0.0   0.0       0.0      0.1  \n",
+       "4        0.0       0.0      0.1    0.0      0.0   0.0       0.0      0.0  "
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
